Change CAN packets structure

--- a/GB_EtherCan_Software_RTOS.ioc
+++ b/GB_EtherCan_Software_RTOS.ioc
@@ -4,14 +4,15 @@ CAD.pinconfig=
 CAD.provider=
 CAN.ABOM=DISABLE
 CAN.AWUM=DISABLE
-CAN.BS1=CAN_BS1_2TQ
+CAN.BS1=CAN_BS1_15TQ
+CAN.BS2=CAN_BS2_2TQ
 CAN.CalculateBaudRate=250000
 CAN.CalculateTimeBit=4000
-CAN.CalculateTimeQuantum=1000.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,SJW,NART,Mode,AWUM,ABOM,BS1
+CAN.CalculateTimeQuantum=222.22222222222223
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,SJW,NART,Mode,AWUM,ABOM,BS2,BS1
 CAN.Mode=CAN_MODE_NORMAL
-CAN.NART=DISABLE
-CAN.Prescaler=36
+CAN.NART=ENABLE
+CAN.Prescaler=8
 CAN.SJW=CAN_SJW_1TQ
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
@@ -83,8 +84,6 @@ Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.CAN1_RX1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true\:true
-NVIC.CAN1_SCE_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
